header section is added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section class="watch">
-      <img src="images/gradient1.png" alt="">
+      <!-- <img src="images/gradient1.png" alt=""> -->
       <div class="watch-text">
         <h2>Always keep a positive <br>Mindset</h2>
         <button class="btn">Call Now</button>
